# PoutouBot

./: README.md  pyproject.toml
poutoubot/: app.py  bientotle.py  mangetamain.py  rainbow.py  whataweek.py
poutoubot/resources/: list_main.txt  list_manger.txt
